src/main/java/syntactic/test/failing/arrayWithCustomClass.ru
struct Test {
    Array Clase test;
}

/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 2 | 11 | Se esperaba [TYPE_INT, TYPE_CHAR, TYPE_STRING, TYPE_BOOL] pero se encontró ID_CLASS: Clase |